L05 - get user by id
